--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ SECRET_KEY=my-secret-key
 ENVIRONMENT=development
 DEBUG=True
 SECURE_SSL_REDIRECT=True
-LOGLEVEL=INFO
+LOGLEVEL=ERROR
 
 # Default DB settings
 DB_USER=appel
@@ -13,8 +13,9 @@ DB_PORT=5432
 
 # Read only DB settings
 DB_READONLY=postgres://appel:appel@postgres:5432/appel
+
 # Ecolo DB (optionnal & read-only)
-ECOLO_DATABASE_URL=postgres://user:password@host:port/ecoloweb?currentSchema=ecolo
+ECOLO_DATABASE_URL=postgres://appel:appel@postgres:5432/ecoloweb?currentSchema=ecolo
 
 MAILJET_API_KEY=<MAILJET_API_KEY>
 MAILJET_API_SECRET=<MAILJET_API_SECRET>
@@ -42,7 +43,7 @@ INSEE_API_SECRET=<INSEE_API_SECRET>
 
 # When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
 # Else, CERBERE authentication is used and experience is the SIAP one
-CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
+# CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
 
 # Used to test SIAP experience without link to SIAP API
 USE_MOCKED_SIAP_CLIENT=False
