--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,12 @@ lint = [
     "pylint",
 ]
 log_level = "INFO"
+
+[tool.coverage.run]
+omit = [
+    "*/__init__.py",
+    "*/tests/*",
+    "*/migrations/*",
+    "ecoloweb/*",
+    "programmes/management/commands/import_galion.py",
+]
