--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - .:/code:cached
     ports:
       - "8001:8000"
+    restart: on-failure # Automatically restart on failure (if PG not up yet)
     depends_on:
       - postgres
       - redis
