Use apilos-like as DB credentials

--- a/.env.template
+++ b/.env.template
@@ -5,17 +5,17 @@ SECURE_SSL_REDIRECT=True
 LOGLEVEL=ERROR
 
 # Default DB settings
-DB_USER=appel
-DB_NAME=appel
+DB_USER=apilos
+DB_NAME=apilos
 DB_HOST=postgres
-DB_PASSWORD=appel
+DB_PASSWORD=apilos
 DB_PORT=5432
 
 # Read only DB settings
-DB_READONLY=postgres://appel:appel@postgres:5432/appel
+DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
 
 # Ecolo DB (optionnal & read-only)
-ECOLO_DATABASE_URL=postgres://appel:appel@postgres:5432/ecoloweb?currentSchema=ecolo
+ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecoloweb?currentSchema=ecolo
 
 MAILJET_API_KEY=<MAILJET_API_KEY>
 MAILJET_API_SECRET=<MAILJET_API_SECRET>
