--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,10 +14,10 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: appel
-          POSTGRES_NAME: appel
+          POSTGRES_USER: apilos
+          POSTGRES_NAME: apilos
           POSTGRES_HOST: postgres
-          POSTGRES_PASSWORD: appel
+          POSTGRES_PASSWORD: apilos
           POSTGRES_PORT: 5432
         options: >-
           --health-cmd pg_isready
