--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,18 @@ jobs:
           name: Deploy Staging APiLos on Scalingo
           command: |
             git push -f git@ssh.osc-fr1.scalingo.com:apilos-siap-ecole.git $CIRCLE_SHA1:master
+  deploy_siap_production:
+    docker:
+      - image: circleci/python:3.9
+    steps:
+      - checkout
+      - run:
+          name: Add Scalingo to known_hosts
+          command: ssh-keyscan -H ssh.osc-fr1.scalingo.com >> ~/.ssh/known_hosts
+      - run:
+          name: Deploy Staging APiLos on Scalingo
+          command: |
+            git push -f git@ssh.osc-fr1.scalingo.com:apilos-siap-production.git $CIRCLE_SHA1:master
 
 
 workflows:
