--- a/.env.template
+++ b/.env.template
@@ -22,13 +22,13 @@ SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 ALLOWED_HOSTS=local.beta.gouv.fr
 
 # Comment AWS configuration block to store files locally in development
-AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
-AWS_SECRET_ACCESS_KEY=<AWS_SECRET_ACCESS_KEY>
-AWS_STORAGE_BUCKET_NAME='apilos-dev'
-AWS_DEFAULT_ACL='public-read'
-AWS_S3_REGION_NAME='fr-par'
-AWS_S3_ENDPOINT_URL='https://s3.fr-par.scw.cloud'
-AWS_ECOLOWEB_BUCKET_NAME='apilos-ecoloweb'
+# AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
+# AWS_SECRET_ACCESS_KEY=<AWS_SECRET_ACCESS_KEY>
+# AWS_STORAGE_BUCKET_NAME='apilos-dev'
+# AWS_DEFAULT_ACL='public-read'
+# AWS_S3_REGION_NAME='fr-par'
+# AWS_S3_ENDPOINT_URL='https://s3.fr-par.scw.cloud'
+# AWS_ECOLOWEB_BUCKET_NAME='apilos-ecoloweb'
 
 # Comment sentry setting to deactivate it
 SENTRY_URL=
