--- a/requirements.in
+++ b/requirements.in
@@ -8,6 +8,7 @@ django-anymail[sendinblue]
 django-cas-ng>=4.3.0
 django-csp>=3.7
 django-filter>=21.1
+django-hijack>=3.2
 django-mailjet>=0.3.1
 django-simple-history
 django-sql-explorer[xls]
