--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           name: Running tests
           command: |
             . .venv/bin/activate
+            cp .env.template .env.test
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
