--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -37,6 +37,7 @@ jobs:
           pip install -r requirements.txt -r dev-requirements.txt
       - name: Execute test with coverage
         run:
+          cp .env.template .env.test
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
