--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,7 +36,8 @@ jobs:
         run:
           pip install -r requirements.txt -r dev-requirements.txt
       - name: Execute test with coverage
-        run:
+        run: |
+          cp .env.template .env.test
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
