--- a/requirements.in
+++ b/requirements.in
@@ -16,7 +16,7 @@ Django>=4.1,<5.0
 djangorestframework-simplejwt>=5.2.0
 djangorestframework>=3.12.4
 docxtpl>=0.12.0
-dramatiq[redis, watch]>=1.13.0
+dramatiq>=1.13.0
 drf-spectacular>=0.22.1
 Faker>=15.3
 gunicorn>=20.1.0
@@ -28,7 +28,9 @@ pylint-django>=2.5.3
 python-box>=6.0
 python-decouple>=3.4
 python-docx>=0.8.11
+redis
 sentry-sdk>=1.5.1
 tqdm>=4.0
 typing-extensions>=3.10
+watch
 whitenoise>=5.3.0
