--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,8 +33,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: |
-          pip install --no-binary django-dramatiq django-dramatiq==0.11.2
+        run:
           pip install -r requirements.txt -r dev-requirements.txt
       - name: Execute test with coverage
         run: |
