--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,11 +33,11 @@ jobs:
         with:
           python-version: '3.10'
       - name: Create ecolotest database
-      - run: |
-          apt-get update
-          apt-get install --yes --no-install-recommends postgresql-client
-          PGPASSWORD=apilos psql -h localhost -U root -d apilos_test -c "create database ecolotest;"
-          PGPASSWORD=apilos psql -h localhost -U root -d ecolotest -c "create schema ecolo;"
+        run: |
+          sudo apt-get update
+          sudo apt-get install --yes --no-install-recommends postgresql-client
+          PGPASSWORD=apilos psql -h localhost -U apilos -d apilos -c "create database ecolotest;"
+          PGPASSWORD=apilos psql -h localhost -U apilos -d ecolotest -c "create schema ecolo;"
       - name: Install dependencies
         run:
           pip install -r requirements.txt -r dev-requirements.txt
@@ -47,6 +47,7 @@ jobs:
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
+          ECOLO_DATABASE_URL: postgres://apilos:apilos@localhost:5432/ecolotest?currentSchema=ecolo
       - name: Create coverage report
         run:
           coverage xml -o coverage.xml
