--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,12 +32,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Create ecolotest database
-        run: |
-          sudo apt-get update
-          sudo apt-get install --yes --no-install-recommends postgresql-client
-          PGPASSWORD=apilos psql -h localhost -U apilos -d apilos -c "create database ecolotest;"
-          PGPASSWORD=apilos psql -h localhost -U apilos -d ecolotest -c "create schema ecolo;"
       - name: Install dependencies
         run:
           pip install -r requirements.txt -r dev-requirements.txt
@@ -47,7 +41,7 @@ jobs:
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
-          ECOLO_DATABASE_URL: postgres://apilos:apilos@localhost:5432/ecolotest?currentSchema=ecolo
+          ECOLO_DATABASE_URL: ""
       - name: Create coverage report
         run:
           coverage xml -o coverage.xml
