--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ jobs:
             . .venv/bin/activate
             cp .env.template .env.test
             python3 manage.py test
+          environment:
+            ECOLO_DATABASE_URL: postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
       - store_artifacts:
           path: test-reports/
           destination: python_app
