Add verbosity to Celery logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
 
   worker:
     <<: *apilos
-    command: python -m celery -A core worker -l INFO
+    command: python -m celery -A core.worker worker -l INFO
     ports: []
 
 
