--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: password
           POSTGRES_DB: apilos_test
+          POSTGRESQL_FSYNC: "off"
     steps:
       - checkout
       - restore_cache:
