--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,6 +19,7 @@ jobs:
           POSTGRES_HOST: postgres
           POSTGRES_PASSWORD: apilos
           POSTGRES_PORT: 5432
+          POSTGRESQL_FSYNC: "off"
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
