--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,12 @@ updates:
       interval: "weekly"
       day: "wednesday"
       time: "06:00" # UTC
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "wednesday"
+      time: "06:00" # UTC
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
